[package]
edition = "2021"
name = "jpst"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
jsonpath-plus = "0.1.9"
once_cell = "1.0"
regex = "1.6.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
