[package]
authors = ["Jolestar <jolestar@gmail.com>", "Starcoin Core Dev <dev@starcoin.org>"]
description = "a simple string template engine that supports JSON Path"
edition = "2021"
license-file = "LICENSE"
name = "jpst"
readme = "README.md"
repository = "https://github.com/starcoinorg/jpst/"
version = "0.1.1"

[dependencies]
anyhow = "1.0"
jsonpath-plus = "0.1.9"
once_cell = "1.0"
regex = "1.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
